# kay_codegen

./: Cargo.toml
src/: generators.rs  generators_old.rs  lib.rs  parsers.rs
src/testcases/: generic_actor_in.rs  generic_actor_out.rs  generic_trait_and_impl_in.rs  generic_trait_and_impl_out.rs  simple_actor_in.rs  simple_actor_out.rs  trait_and_impl_in.rs  trait_and_impl_out.rs
