[package]
name = "kay_codegen"
description = "Code generation for implementing kay actors"
version = "0.3.1"
authors = ["Anselm Eickhoff <anselm.eickhoff@gmail.com>"]
repository = "https://github.com/aeickhoff/kay_codegen"
license = "MIT"
[badges]
maintenance = { status = "experimental" }

[dependencies]
syn = "0.15.18"
quote = "0.3.15"
ordermap = "0.3.2"
glob = "0.2.11"
unindent = "0.1.3"

[dev-dependencies]
pretty_assertions = "0.4.1"

[features]
default = ["syn/full", "syn/extra-traits"]
serde-serialization = []
