[package]
name = "kay_codegen"
description = "Code generation for implementing kay actors"
version = "0.3.10"
authors = ["Anselm Eickhoff <anselm.eickhoff@gmail.com>"]
repository = "https://github.com/aeickhoff/kay_codegen"
license = "MIT"
[badges]
maintenance = { status = "experimental" }

[dependencies]
syn = "0.15.34"
indexmap = "1.0.2"
glob = "0.3.0"
unindent = "0.1.3"

[dev-dependencies]
pretty_assertions = "0.6.1"

[features]
default = ["syn/full", "syn/extra-traits"]
serde-serialization = []
